--- a/hw/bsp/arduino_primo_nrf52/bsp.yml
+++ b/hw/bsp/arduino_primo_nrf52/bsp.yml
@@ -27,10 +27,11 @@ bsp.debugscript: primo_debug.sh
 
 bsp.flash_map:
     areas:
+        # System areas.
         FLASH_AREA_BOOTLOADER:
             device: 0
             offset: 0x00000000
-            size: 32kB
+            size: 16kB
         FLASH_AREA_IMAGE_0:
             device: 0
             offset: 0x00008000
@@ -44,6 +45,7 @@ bsp.flash_map:
             offset: 0x0007c000
             size: 4kB
 
+        # User areas.
         FLASH_AREA_REBOOT_LOG:
             user_id: 0
             device: 0
