--- a/hw/bsp/bmd300eval/bsp.yml
+++ b/hw/bsp/bmd300eval/bsp.yml
@@ -27,10 +27,11 @@ bsp.debugscript: bmd300eval_debug.sh
 
 bsp.flash_map:
     areas:
+        # System areas.
         FLASH_AREA_BOOTLOADER:
             device: 0
             offset: 0x00000000
-            size: 32kB
+            size: 16kB
         FLASH_AREA_IMAGE_0:
             device: 0
             offset: 0x00008000
@@ -43,6 +44,13 @@ bsp.flash_map:
             device: 0
             offset: 0x0007c000
             size: 4kB
+
+        # User areas.
+        FLASH_AREA_REBOOT_LOG:
+            user_id: 0
+            device: 0
+            offset: 0x00004000
+            size: 16kB
         FLASH_AREA_NFFS:
             user_id: 1
             device: 0
