--- a/hw/bsp/native/bsp.yml
+++ b/hw/bsp/native/bsp.yml
@@ -23,6 +23,7 @@ bsp.debugscript: "native_debug.sh"
 
 bsp.flash_map:
     areas:
+        # System areas.
         FLASH_AREA_BOOTLOADER:
             device: 0
             offset: 0x00000000
@@ -40,6 +41,7 @@ bsp.flash_map:
             offset: 0x000e0000
             size: 128kB
 
+        # User areas.
         FLASH_AREA_REBOOT_LOG:
             user_id: 0
             device: 0
