--- a/hw/bsp/arduino_primo_nrf52/pkg.yml
+++ b/hw/bsp/arduino_primo_nrf52/pkg.yml
@@ -33,6 +33,7 @@ pkg.cflags:
     - '-DSPI_MASTER_0_ENABLE'
 
 pkg.deps:
+    - boot/bootutil
     - hw/mcu/nordic/nrf52xxx
     - libc/baselibc
     - sys/flash_map
