--- a/hw/bsp/bmd300eval/pkg.yml
+++ b/hw/bsp/bmd300eval/pkg.yml
@@ -32,6 +32,7 @@ pkg.cflags:
     - '-DSPI_MASTER_0_ENABLE'
 
 pkg.deps:
+    - boot/bootutil
     - hw/mcu/nordic/nrf52xxx
     - libc/baselibc
     - sys/flash_map
