--- a/hw/bsp/native/pkg.yml
+++ b/hw/bsp/native/pkg.yml
@@ -25,7 +25,9 @@ pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
     - native
     - bsp
+
 pkg.deps:
+    - boot/bootutil
     - hw/mcu/native
     - hw/drivers/uart/uart_hal
     - sys/flash_map
