--- a/hw/bsp/nrf51-blenano/pkg.yml
+++ b/hw/bsp/nrf51-blenano/pkg.yml
@@ -32,6 +32,7 @@ pkg.cflags:
     - '-DNRF51'
 
 pkg.deps:
+    - boot/bootutil
     - hw/mcu/nordic/nrf51xxx
     - libc/baselibc
     - sys/flash_map
