--- a/hw/bsp/nrf51dk-16kbram/pkg.yml
+++ b/hw/bsp/nrf51dk-16kbram/pkg.yml
@@ -31,6 +31,7 @@ pkg.cflags:
     - '-DNRF51'
 
 pkg.deps:
+    - boot/bootutil
     - hw/mcu/nordic/nrf51xxx
     - libc/baselibc
     - sys/flash_map
