--- a/hw/bsp/nrf52dk/bsp.yml
+++ b/hw/bsp/nrf52dk/bsp.yml
@@ -27,6 +27,7 @@ bsp.debugscript: nrf52dk_debug.sh
 
 bsp.flash_map:
     areas:
+        # System areas.
         FLASH_AREA_BOOTLOADER:
             device: 0
             offset: 0x00000000
@@ -44,6 +45,7 @@ bsp.flash_map:
             offset: 0x0007c000
             size: 4kB
 
+        # User areas.
         FLASH_AREA_REBOOT_LOG:
             user_id: 0
             device: 0
