--- a/hw/bsp/arduino_primo_nrf52/syscfg.yml
+++ b/hw/bsp/arduino_primo_nrf52/syscfg.yml
@@ -100,6 +100,10 @@ syscfg.defs:
         description: 'TBD'
         value: '((1 << __NVIC_PRIO_BITS) - 1)'
 
+    USE_OPENOCD:
+        description: 'Whether to use OpenOCD instead of JLink for debug and upload.'
+        value: 0
+
 syscfg.vals:
     CONFIG_FCB_FLASH_AREA: FLASH_AREA_NFFS
     REBOOT_LOG_FLASH_AREA: FLASH_AREA_REBOOT_LOG
