MYNEWT-346 BLE Host - Remove extraneous dep.

--- a/net/nimble/host/pkg.yml
+++ b/net/nimble/host/pkg.yml
@@ -32,7 +32,7 @@ pkg.deps:
     - sys/stats
     - util/mem
 
-pkg.deps.BLE_SM:
+pkg.deps.BLE_SM_LEGACY:
     - crypto/mbedtls
 
 pkg.deps.BLE_SM_SC:
