--- a/apps/loratest/pkg.yml
+++ b/apps/loratest/pkg.yml
@@ -39,6 +39,8 @@ pkg.deps:
     - sys/stats/full
     - boot/split
     - "@apache-mynewt-core/net/lora/mac"
+    - "@apache-mynewt-core/net/lora/radio"
+    - "@apache-mynewt-core/net/lora/radio/sx1276"
 
 pkg.deps.CONFIG_NFFS:
     - fs/nffs
