--- a/net/lora/radio/sx1276/pkg.yml
+++ b/net/lora/radio/sx1276/pkg.yml
@@ -24,3 +24,4 @@ pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
 pkg.deps:
     - "@apache-mynewt-core/kernel/os"
+    - "@apache-mynewt-core/net/lora/radio"
