--- a/net/loramac-node/pkg.yml
+++ b/net/loramac-node/pkg.yml
@@ -17,7 +17,7 @@
 # under the License.
 #
 
-pkg.name: net/lora
+pkg.name: net/loramac-node
 pkg.description: XXX
 pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
