--- a/net/loramac-node/radio/sx1276/pkg.yml
+++ b/net/loramac-node/radio/sx1276/pkg.yml
@@ -17,11 +17,11 @@
 # under the License.
 #
 
-pkg.name: net/lora/radio/sx1276
+pkg.name: net/loramac-node/radio/sx1276
 pkg.description: XXX
 pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
 pkg.deps:
     - "@apache-mynewt-core/kernel/os"
-    - "@apache-mynewt-core/net/lora/radio"
+    - "@apache-mynewt-core/net/loramac-node/radio"
