--- a/hw/drivers/loramac-node/board/nrf52/pkg.yml
+++ b/hw/drivers/loramac-node/board/nrf52/pkg.yml
@@ -17,11 +17,14 @@
 # under the License.
 #
 
-pkg.name: net/loramac-node/radio/sx1276
+pkg.name: hw/drivers/loramac-node/board/nrf52
 pkg.description: XXX
 pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
 pkg.deps:
     - "@apache-mynewt-core/kernel/os"
-    - "@apache-mynewt-core/net/loramac-node/radio"
+    - "@apache-mynewt-core/net/loramac-node"
+
+pkg.apis:
+    - loramac_board
