--- a/hw/drivers/loramac-node/board/nrf52/syscfg.yml
+++ b/hw/drivers/loramac-node/board/nrf52/syscfg.yml
@@ -6,9 +6,9 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-#
+# 
 #  http://www.apache.org/licenses/LICENSE-2.0
-#
+# 
 # Unless required by applicable law or agreed to in writing,
 # software distributed under the License is distributed on an
 # "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -18,12 +18,10 @@
 #
 
 syscfg.defs:
-    LORAMAC_NODE:
-        description: >
-            Used by package management system to include loramac-node hardware
-            drivers.
-        value: 1
-
-    LORAMAC_NODE_CLI:
-        description: "Include shell commands for LoRa operations"
+    LORAMAC_NODE_BOARD_SPI_IDX:
+        description:
         value: 0
+
+    LORAMAC_NODE_BOARD_SPI_BAUDRATE:
+        description:
+        value: 500
