--- a/hw/drivers/loramac-node/radio/sx1276/pkg.yml
+++ b/hw/drivers/loramac-node/radio/sx1276/pkg.yml
@@ -23,9 +23,13 @@ pkg.author: "Semtech"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
     - lora
+
 pkg.deps:
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/net/loramac-node"
 
 pkg.apis:
     - loramac_radio
+
+pkg.req_apis:
+    - loramac_board
