--- a/util/parse/pkg.yml
+++ b/util/parse/pkg.yml
@@ -6,7 +6,7 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-#
+# 
 #  http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing,
@@ -17,13 +17,16 @@
 # under the License.
 #
 
-syscfg.defs:
-    LORAMAC_NODE:
-        description: >
-            Used by package management system to include loramac-node hardware
-            drivers.
-        value: 1
+pkg.name: util/parse
+pkg.description: Library containing miscellaneous utilities.
+pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
+pkg.homepage: "http://mynewt.apache.org/"
+pkg.keywords:
+    - parse
 
-    LORAMAC_NODE_CLI:
-        description: "Include shell commands for LoRa operations"
-        value: 0
+pkg.cflags:
+    # Required for [U]LLONG_{MIN,MAX}
+    - "-std=c99"
+
+pkg.deps:
+    - "@apache-mynewt-core/sys/defs"
