--- a/hw/drivers/lora/node/board/nrf52/pkg.yml
+++ b/hw/drivers/lora/node/board/nrf52/pkg.yml
@@ -17,31 +17,18 @@
 # under the License.
 #
 
-pkg.name: apps/loraping
-pkg.type: app
-pkg.description: "Example application which uses a variety of mynewt features."
-pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
+pkg.name: hw/drivers/lora/node/board/nrf52
+pkg.description: LoRaMac-node board driver for nRF52 systems.
+pkg.author: "Telenor Digital AS"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
-
+    - lora
 pkg.deps:
-    - "@apache-mynewt-core/boot/bootutil"
-    - "@apache-mynewt-core/boot/split"
     - "@apache-mynewt-core/kernel/os"
-    - "@apache-mynewt-core/mgmt/imgmgr"
-    - "@apache-mynewt-core/mgmt/newtmgr"
-    - "@apache-mynewt-core/mgmt/newtmgr/transport/nmgr_shell"
     - "@apache-mynewt-core/net/lora/node"
-    - "@apache-mynewt-core/sys/config"
-    - "@apache-mynewt-core/sys/console/full"
-    - "@apache-mynewt-core/sys/id"
-    - "@apache-mynewt-core/sys/log/full"
-    - "@apache-mynewt-core/sys/shell"
-    - "@apache-mynewt-core/sys/stats/full"
-    - "@apache-mynewt-core/test/flash_test"
 
-pkg.deps.CONFIG_NFFS:
-    - fs/nffs
+pkg.apis:
+    - lora_node_board
 
-pkg.deps.CONFIG_FCB:
-    - fs/fcb
+pkg.init:
+    lora_node_nrf52_init: 100
