--- a/net/lora/node/mac/pkg.yml
+++ b/net/lora/node/mac/pkg.yml
@@ -17,31 +17,15 @@
 # under the License.
 #
 
-pkg.name: apps/loraping
-pkg.type: app
-pkg.description: "Example application which uses a variety of mynewt features."
+pkg.name: net/lora/node/mac
+pkg.description: XXX
 pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
-
 pkg.deps:
-    - "@apache-mynewt-core/boot/bootutil"
-    - "@apache-mynewt-core/boot/split"
     - "@apache-mynewt-core/kernel/os"
-    - "@apache-mynewt-core/mgmt/imgmgr"
-    - "@apache-mynewt-core/mgmt/newtmgr"
-    - "@apache-mynewt-core/mgmt/newtmgr/transport/nmgr_shell"
     - "@apache-mynewt-core/net/lora/node"
-    - "@apache-mynewt-core/sys/config"
-    - "@apache-mynewt-core/sys/console/full"
-    - "@apache-mynewt-core/sys/id"
-    - "@apache-mynewt-core/sys/log/full"
-    - "@apache-mynewt-core/sys/shell"
-    - "@apache-mynewt-core/sys/stats/full"
-    - "@apache-mynewt-core/test/flash_test"
 
-pkg.deps.CONFIG_NFFS:
-    - fs/nffs
-
-pkg.deps.CONFIG_FCB:
-    - fs/fcb
+pkg.cflags:
+    # Allow declarations inside for loops.
+    - "-std=c99"
