--- a/hw/bsp/telee02/pkg.yml
+++ b/hw/bsp/telee02/pkg.yml
@@ -89,7 +89,7 @@ pkg.deps:
 pkg.deps.BLE_DEVICE:
     - hw/drivers/nimble/nrf52
 
-pkg.deps.LORAMAC_NODE:
+pkg.deps.LORA_NODE:
     - hw/drivers/lora/node/radio/sx1276
     - hw/drivers/lora/node/board/nrf52
 
