--- a/net/lora/node/pkg.yml
+++ b/net/lora/node/pkg.yml
@@ -23,6 +23,11 @@ pkg.author: "Semtech"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
     - lora
+
+pkg.cflags:
+    # Allow declarations inside for loops.
+    - "-std=c99"
+
 pkg.deps:
 
 pkg.deps.LORA_NODE_CLI:
