--- a/util/syscalls/pkg.yml
+++ b/util/syscalls/pkg.yml
@@ -17,20 +17,9 @@
 # under the License.
 #
 
-pkg.name: hw/bsp/native
-pkg.type: bsp
-pkg.description: BSP definition for native (amd64) applications.
+pkg.name: util/syscalls
+pkg.description: Library containing miscellaneous utilities.
 pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
-    - native
-    - bsp
-
-pkg.deps:
-    - hw/mcu/native
-    - hw/drivers/uart/uart_hal
-    - net/ip/native_sockets
-    - util/syscalls
-
-pkg.deps.BLE_DEVICE:
-    - hw/drivers/nimble/native
+    - mempool
